src/core-crm/objects/IP_Management_Relationship__c/IP_Management_Relationship__c.object-meta.xml
<CustomObject>
    <description>IP Management Relationship stores and resolves the many-to-many relationships between and IP Management record and another business process e.g. Engagements, and/or Opportunities and/or an Opportunity Outcomes.</description>
    <label>IP Management Relationship</label>
    <nameField>
        <displayFormat>IPMR-{000000}</displayFormat>
        <label>IP Management Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP Management Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>