src/core-crm/objects/IP_Management_Relationship__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>IF( RecordType.DeveloperName = &quot;IP_Engagement_Relationship&quot; ,  Engagement__r.CreatedDate ,
IF( RecordType.DeveloperName = &quot;IP_Opportunity_Relationship&quot; , Opportunity__r.CreatedDate ,
IF( RecordType.DeveloperName = &quot;IP_Opportunity_Outcome_Relationship&quot; , Opportunity_Outcome__r.CreatedDate , NOW() )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>