src/core-crm/objects/IP_Management_Relationship__c/fields/IP_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Name__c</fullName>
    <description>Replicated field from IP Management Object to support business data view which exposes data fields within the Engagement, Opportunity or Opportunity Outcome UI.</description>
    <formula>IP_Management__r.IP_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Name</label>
    <type>Text</type>
</CustomField>