src/core-crm/objects/IP_Management_Relationship__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether or not the relationship between a IP Management record and another business process is active or not.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>