src/core-crm/objects/IP_Management_Relationship__c/fields/Opportunity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a related Opportunity Outcome.</description>
    <label>Opportunity Outcome</label>
    <referenceTo>Opportunity_Outcome__c</referenceTo>
    <relationshipLabel>IP Management Relationships</relationshipLabel>
    <relationshipName>IP_Management_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>