src/core-crm/objects/IP_Management_Relationship__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Returns the name of the DEP user who is the current ‘owner’ of the the related Engagement, Opportunity or Opportunity Outcome record.</description>
    <formula>IF( RecordType.DeveloperName = &quot;IP_Engagement_Relationship&quot; , Engagement__r.Owner:User.FirstName + &apos; &apos; + Engagement__r.Owner:User.LastName ,
IF( RecordType.DeveloperName = &quot;IP_Opportunity_Relationship&quot; , Opportunity__r.Owner.FirstName  + &apos; &apos; + Opportunity__r.Owner.LastName , 
IF( RecordType.DeveloperName = &quot;IP_Opportunity_Outcome_Relationship&quot; , Opportunity_Outcome__r.Owner:User.FirstName  + &apos; &apos; + Opportunity_Outcome__r.Owner:User.LastName , &quot;&quot; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>