src/core-crm/objects/IP_Management_Relationship__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Returns the related record type name value from the related Engagement, Opportunity
        or Opportunity Outcome record.</description>
    <formula>IF( RecordType.DeveloperName = &quot;IP_Engagement_Relationship&quot; ,
        Engagement__r.RecordType.Name ,
        IF( RecordType.DeveloperName = &quot;IP_Opportunity_Relationship&quot; ,
        Opportunity__r.RecordType.Name ,
        IF( RecordType.DeveloperName = &quot;IP_Opportunity_Outcome_Relationship&quot; ,
        Opportunity_Outcome__r.RecordType.Name , &quot;&quot; ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>