src/core-crm/objects/IP_Management_Relationship__c/fields/Related_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Related_Created_Date__c</fullName>
    <description>Returns the creation date of the related Engagement, Opportunity or Opportunity Outcome record.</description>
    <formula>IF( RecordType.DeveloperName = &quot;IP_Engagement_Relationship&quot; , Engagement__r.CreatedDate ,
IF( RecordType.DeveloperName = &quot;IP_Opportunity_Relationship&quot; , Opportunity__r.CreatedDate ,
IF( RecordType.DeveloperName = &quot;IP_Opportunity_Outcome_Relationship&quot; , Opportunity_Outcome__r.CreatedDate , NOW() )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Created Date</label>
    <type>Date</type>
</CustomField>