src/core-crm/objects/IP_Management_Relationship__c/fields/Related_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Name__c</fullName>
    <description>Returns the Name field value from the related Engagement, Opportunity or Opportunity Outcome record.</description>
    <formula>IF(RecordType.DeveloperName = &quot;IP_Engagement_Relationship&quot; ,
HYPERLINK(
  &quot;/lightning/r/&quot; &amp;  Engagement__c &amp; &quot;/view&quot;,
   Engagement__r.Name,
  &quot;_self&quot;
),
IF( RecordType.DeveloperName = &quot;IP_Opportunity_Relationship&quot; ,
HYPERLINK(
  &quot;/lightning/r/&quot; &amp;  Opportunity__c  &amp; &quot;/view&quot;,
  Opportunity__r.Name ,
  &quot;_self&quot;
),
IF( RecordType.DeveloperName = &quot;IP_Opportunity_Outcome_Relationship&quot; ,
HYPERLINK(
  &quot;/lightning/r/&quot; &amp;  Opportunity_Outcome__c &amp; &quot;/view&quot;,
  Opportunity_Outcome__r.Name,
  &quot;_self&quot;
), &quot;&quot; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record Name</label>
    <type>Text</type>
</CustomField>