src/core-crm/objects/IP_Management_Relationship__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <description>Returns the current Stage of the related Engagement, Opportunity or Opportunity Outcome record.</description>
    <formula>IF( RecordType.DeveloperName = &quot;IP_Engagement_Relationship&quot; , TEXT( Engagement__r.Stage_Name__c ) ,
IF( RecordType.DeveloperName = &quot;IP_Opportunity_Relationship&quot; , TEXT( Opportunity__r.StageName ) ,
IF( RecordType.DeveloperName = &quot;IP_Opportunity_Outcome_Relationship&quot; , TEXT( Opportunity_Outcome__r.Stage_Name__c ), &quot;&quot; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>