src/core-crm/objects/IP_Management_Relationship__c/recordTypes/IP_Engagement_Relationship.recordType-meta.xml
<RecordType>
    <fullName>IP_Engagement_Relationship</fullName>
    <active>true</active>
    <description>Capture relationship between IP Management and an Engagement.</description>
    <label>IP Engagement Relationship</label>
</RecordType>