src/core-crm/objects/IP_Management_Relationship__c/recordTypes/IP_Opportunity_Outcome_Relationship.recordType-meta.xml
<RecordType>
    <fullName>IP_Opportunity_Outcome_Relationship</fullName>
    <active>true</active>
    <description>Capture relationship between IP Management and an Opportunity Outcome.</description>
    <label>IP Opportunity Outcome Relationship</label>
</RecordType>