src/core-crm/objects/IP_Management_Relationship__c/recordTypes/IP_Opportunity_Relationship.recordType-meta.xml
<RecordType>
    <fullName>IP_Opportunity_Relationship</fullName>
    <active>true</active>
    <description>Capture relationship between IP Management and an Opportunity.</description>
    <label>IP Opportunity Relationship</label>
</RecordType>